[wcag] Fix colour contrast on 'according to' text

--- a/ckanext/gbif/theme/fanstatic/css/gbif.css
+++ b/ckanext/gbif/theme/fanstatic/css/gbif.css
@@ -117,7 +117,7 @@ div#dqi div.dqi-errors ul li.major-errors:before{
 
 table#record-view th small{
     font-size: 14px;
-    color: #818181;
+    color: #767676;
     position: relative;
     left: -5px;
 }
